assets/css/main.css
html, body {
  height: 100%;
  padding: 0;
  margin: 0;
}

body {
  color: #fff;
  background-color: #222;
  font-family: Raleway;
  font-size: 15px;
}

h1, h2, h3, h4 {
  margin: 0;
}

p {
  margin: 0;
  padding: 0;
}

a {
  color: #fff;
  text-decoration: none;
}

small {
  font-size: 10px;
}

main {
  width: 100%;
  height: calc(100% - 45px);
}

header {
  left: 0;
  right: 0;
  height: 45px;
}

nav {
  height: 100%;
  font-size: 18px;
  text-transform: uppercase;
}

footer {
  position: fixed;
  bottom: 8px;
  right: 12px;
  font-family: Rubik, sans-serif;
  font-size: 12px;
}

footer > p > a {
  font-weight: 600;
}

nav > a {
  transition: all .6s ease;
}

nav > a.selected, nav > a:hover {
  transform: scale(1.05);
}

nav > a.selected {
  font-weight: 600;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-color: #fff;
}

nav > a:not(:last-child) {
  margin-right: 16px;
}

video.cover {
  position: fixed;
  z-index: -1;
  overflow: hidden;
  -webkit-filter: blur(3px);
  -moz-filter: blur(3px);
  -o-filter: blur(3px);
  -ms-filter: blur(3px);
  filter: blur(3px);
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
	filter: alpha(opacity=25);
	-moz-opacity:0.25;
  -khtml-opacity: 0.25;
  opacity: 0.25;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

main.flex-center {
  flex-direction: column;
}

.horizonal-center {
  margin: 0 auto;
}

.short-bio {
  margin-top: 4px;
  font-size: 20px;
}

.button {
  background: #222;
  color: rgba(255, 255, 255, 0.6);
  border-width: 1px;
  border-style: solid;
  border-image: linear-gradient(90deg,#5433ff,#20bdff,#a5fecb) 1;
  padding: 10px;
  font-size: 14px;
  cursor: pointer;
  transition: all .6s ease;
}

.button:hover {
  color: #fff;
  transform: scale(1.05) translateY(-0.1rem);
  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25);
}

.button.down {
  margin-top: 10px;
}

.container {
  max-width: 50%;
}

.container::after {
  content: "";
  clear: both;
  display: table;
}

.container.top-space {
  padding: 40px 0;
}

.container > .header {
  border-bottom-width: 3px;
  border-bottom-style: solid;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  padding-bottom: 8px;
  font-size: 16px;
}

.container > .header > h3 {
  display: inline-block;
}

.container > .toggle {
  float: right;
  cursor: pointer;
}

.container > input {
  display: none;
}

.container > input:checked + .content { 
  display: none; 
}

.container .content.hide, .container > input { 
  display: none; 
}

.container > .content {
  padding: 8px 0;
}

.portfolio-image {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  transition: 0.3s;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  padding: 5px;
  color: #bbb;
}

.portfolio-image:hover {
  -webkit-filter: grayscale(0%);
  filter: grayscale(0%);
  transform: scale(1.03);
  color: #fff;
}

.portfolio-image > img {
  width: 100%;
}

.portfolio-image > .subtitle {
  position: absolute;
  bottom: 12px;
  left: 12px;
  text-transform: uppercase;
  font-weight: 800;
}

/* BEGIN PAGE GRADIENTS */
.container#about > .header {
  border-image: linear-gradient(90deg,#00bcff,#244493) 1;
}
.container#about > .content > span {
  background: -webkit-linear-gradient(0deg,#00bcff,#476dca);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  white-space: nowrap;
}

.container#lit-review > .header {
  border-image: linear-gradient(90deg,#a1003d,#5b00b1) 1;
}
.container#lit-review > .content > span {
  background: -webkit-linear-gradient(0deg,#a1003d,#5b00b1);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  white-space: nowrap;
}
.container#lit-review > article > h4:not(:first-child) {
  margin-top: 10px;
}
.container#lit-review > article > p:not(:first-child) {
  margin-bottom: 10px;
}

.container#portfolio > .header {
  border-image: linear-gradient(90deg,#dbd73f,#6000b7) 1;
}
.container#portfolio > .content > span {
  background: -webkit-linear-gradient(0deg,#dbd73f,#6000b7);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  white-space: nowrap;
}
/* END PAGE GRADIENTS */

/* BEGIN SCROLL BAR */
::-webkit-scrollbar {
  width: 6px;
}
::-webkit-scrollbar-track {
  background: none;
}
::-webkit-scrollbar-thumb {
  background: #fff;
}
/* END SCROLL BAR */

/* BEGIN SPACERS */
.spacer-1 {
  max-width: 8.33%;
  float: left;
}
.spacer-2 {
  max-width: 16.66%;
  float: left;
}
.spacer-4 {
  max-width: 33.33%;
  float: left;
}
.spacer-6 {
  max-width: 50%;
  float: left;
}
/* END SPACERS */

